--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         <a class="nav-link" href="research.html">Research</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="media.html" >Media</a>
+                        <a class="nav-link" href="media.html">Media</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="https://mikecgreenblog.wordpress.com/" target="_blank">Blog</a>
@@ -232,21 +232,21 @@
                     <div class="container">
                       <div class="row">
                         <div class="col">
-                          <label for="range-width" class="form-label">Width: </label>
+                          <label for="range-width" class="form-label" data-bs-toggle="tooltip" data-bs-placement="top" title="Total level width">Width: </label>
                           <output>10</output>
-                          <input type="range" class="form-range" id="range-width" value="10" min="5" max="25" step="1" oninput="this.previousElementSibling.value = this.value">
+                          <input type="range" class="form-range" id="range-width" value="10" min="5" max="25" step="1" oninput="this.previousElementSibling.value = this.value" data-bs-toggle="tooltip" data-bs-placement="top" title="Total level width">
                         </div>
                         <div class="col">
-                          <label for="range-height" class="form-label">Height: </label>
+                          <label for="range-height" class="form-label" data-bs-toggle="tooltip" data-bs-placement="top" title="Total level height">Height: </label>
                           <output>10</output>
-                          <input type="range" class="form-range" id="range-height" value="10" min="5" max="15" step="1" oninput="this.previousElementSibling.value = this.value">
+                          <input type="range" class="form-range" id="range-height" value="10" min="5" max="15" step="1" oninput="this.previousElementSibling.value = this.value" data-bs-toggle="tooltip" data-bs-placement="top" title="Total level height">
                         </div>
                       </div>
                       <div class="row">
                         <div class="col">
-                          <label for="range-openess" class="form-label">Openness: </label>
+                          <label for="range-openess" class="form-label" data-bs-toggle="tooltip" data-bs-placement="top" title="Blank/Wall tile ratio">Openness: </label>
                           <output>5</output>
-                          <input type="range" class="form-range" id="range-openess" value="5" min="1" max="10" step="1" oninput="this.previousElementSibling.value = this.value">
+                          <input type="range" class="form-range" id="range-openess" value="5" min="1" max="10" step="1" oninput="this.previousElementSibling.value = this.value" data-bs-toggle="tooltip" data-bs-placement="top" title="Blank/Wall tile ratio">
                         </div>          
                       </div>
                       <div class="collapse" id="collapseExample">
@@ -259,31 +259,31 @@
                           </div>
                           <div class="row">
                             <div class="col">
-                              <label for="range-goblins" class="form-label">Max Goblins: </label>
+                              <label for="range-goblins" class="form-label" data-bs-toggle="tooltip" data-bs-placement="top" title="The max number of (melee) goblins">Max Goblins: </label>
                               <output>2</output>
-                              <input type="range" class="form-range" id="range-goblins" value="2" min="0" max="5" step="1" oninput="this.previousElementSibling.value = this.value">
+                              <input type="range" class="form-range" id="range-goblins" value="2" min="0" max="5" step="1" oninput="this.previousElementSibling.value = this.value" data-bs-toggle="tooltip" data-bs-placement="top" title="The max number of (melee) goblins">
                             </div>
                             <div class="col">
-                              <label for="range-wizards" class="form-label">Max Wizards: </label>
+                              <label for="range-wizards" class="form-label" data-bs-toggle="tooltip" data-bs-placement="top" title="The max number of (ranged) wizards">Max Wizards: </label>
                               <output>1</output>
-                              <input type="range" class="form-range" id="range-wizards" value="1" min="0" max="5" step="1" oninput="this.previousElementSibling.value = this.value">
+                              <input type="range" class="form-range" id="range-wizards" value="1" min="0" max="5" step="1" oninput="this.previousElementSibling.value = this.value" data-bs-toggle="tooltip" data-bs-placement="top" title="The max number of (ranged) wizards">
                             </div>
                             <div class="col">
-                              <label for="range-blobs" class="form-label">Max Blobs: </label>
+                              <label for="range-blobs" class="form-label" data-bs-toggle="tooltip" data-bs-placement="top" title="The max number of blobs">Max Blobs: </label>
                               <output>2</output>
-                              <input type="range" class="form-range" id="range-blobs" value="2" min="0" max="5" step="1" oninput="this.previousElementSibling.value = this.value">
+                              <input type="range" class="form-range" id="range-blobs" value="2" min="0" max="5" step="1" oninput="this.previousElementSibling.value = this.value" data-bs-toggle="tooltip" data-bs-placement="top" title="The max number of blobs">
                             </div>
                           </div>
                           <div class="row">
                             <div class="col">
-                              <label for="range-ogres" class="form-label">Max Ogres: </label>
+                              <label for="range-ogres" class="form-label" data-bs-toggle="tooltip" data-bs-placement="top" title="The max number of ogres">Max Ogres: </label>
                               <output>1</output>
-                              <input type="range" class="form-range" id="range-ogres" value="1" min="0" max="5" step="1" oninput="this.previousElementSibling.value = this.value">
+                              <input type="range" class="form-range" id="range-ogres" value="1" min="0" max="5" step="1" oninput="this.previousElementSibling.value = this.value" data-bs-toggle="tooltip" data-bs-placement="top" title="The max number of ogres">
                             </div>
                             <div class="col">
-                              <label for="range-minitaurs" class="form-label">Max Minitaurs: </label>
+                              <label for="range-minitaurs" class="form-label" data-bs-toggle="tooltip" data-bs-placement="top" title="The max number of minitaurs">Max Minitaurs: </label>
                               <output>1</output>
-                              <input type="range" class="form-range" id="range-minitaurs" value="1" min="0" max="5" step="1" oninput="this.previousElementSibling.value = this.value">
+                              <input type="range" class="form-range" id="range-minitaurs" value="1" min="0" max="5" step="1" oninput="this.previousElementSibling.value = this.value" data-bs-toggle="tooltip" data-bs-placement="top" title="The max number of minitaurs">
                             </div>
                           </div>
                           <div class="row">
@@ -293,19 +293,19 @@
                           </div>
                           <div class="row">
                             <div class="col">
-                              <label for="range-potions" class="form-label">Max Potions: </label>
+                              <label for="range-potions" class="form-label" data-bs-toggle="tooltip" data-bs-placement="top" title="The max number of potions">Max Potions: </label>
                               <output>2</output>
-                              <input type="range" class="form-range" id="range-potions" value="2" min="0" max="8" step="1" oninput="this.previousElementSibling.value = this.value">
+                              <input type="range" class="form-range" id="range-potions" value="2" min="0" max="8" step="1" oninput="this.previousElementSibling.value = this.value" data-bs-toggle="tooltip" data-bs-placement="top" title="The max number of potions">
                             </div>
                             <div class="col">
-                              <label for="range-treasures" class="form-label">Max Treasures: </label>
+                              <label for="range-treasures" class="form-label" data-bs-toggle="tooltip" data-bs-placement="top" title="The max number of treasures">Max Treasures: </label>
                               <output>3</output>
-                              <input type="range" class="form-range" id="range-treasures" value="3" min="0" max="8" step="1" oninput="this.previousElementSibling.value = this.value">
+                              <input type="range" class="form-range" id="range-treasures" value="3" min="0" max="8" step="1" oninput="this.previousElementSibling.value = this.value" data-bs-toggle="tooltip" data-bs-placement="top" title="The max number of treasures">
                             </div>
                             <div class="col">
-                              <label for="range-portals" class="form-label">Max Portals: </label>
+                              <label for="range-portals" class="form-label" data-bs-toggle="tooltip" data-bs-placement="top" title="The max number of portals">Max Portals: </label>
                               <output>2</output>
-                              <input type="range" class="form-range" id="range-portals" value="2" min="0" max="2" step="2" oninput="this.previousElementSibling.value = this.value">
+                              <input type="range" class="form-range" id="range-portals" value="2" min="0" max="2" step="2" oninput="this.previousElementSibling.value = this.value" data-bs-toggle="tooltip" data-bs-placement="top" title="The max number of portals">
                             </div>
                           </div>
                         </div>
@@ -623,7 +623,7 @@
     <script src="js/jquery.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="js/bootstrap.bundle.min.js"></script>
 
     <!-- Dungeon Generator Scripts -->
     <script src="js/level_generator/visualizer.js"></script>
