fixed counts, added github to header

--- a/media.html
+++ b/media.html
@@ -71,6 +71,9 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="papers/Current.pdf" target="_blank">CV</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="https://github.com/mcgreentn" target="_blank">Github</a>
+                            </li>
                         </ul>
                         <span class="navbar-text">
                             AI-Games-Learning
