--- a/research.html
+++ b/research.html
@@ -72,6 +72,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="papers/Current.pdf" target="_blank">CV</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://github.com/mcgreentn" target="_blank">Github</a>
+                    </li>
                 </ul>
                 <span class="navbar-text">
                     AI-Games-Learning
@@ -86,7 +89,7 @@
                 <h2>Published Work</h2>
             </div>
             <div class="row">
-                <i><a id="journal-count"></a> journal articles, <a id="conference-count"></a> conference papers, <a id="workshop-count"></a> workshop papers in reverse chronological order. Some of
+                <i><a id="research-count"></a> total papers; broken down into <a id="journal-count"></a> journal articles, <a id="conference-count"></a> conference papers, <a id="workshop-count"></a> workshop papers, <a id="unpublished-count"></a> unpublished papers, and <a id="thesis-count"></a> thesis paper in reverse chronological order. Some of
                     these projects have demos and code, albeit not always in a friendly format (working on that!). A few
                     even have blog posts!</i>
                 <br /><br />
@@ -121,6 +124,9 @@
             let journalCount = 0;
             let conferenceCount = 0;
             let workshopCount = 0;
+            let thesisCount = 0;
+            let unpublishedCount = 0;
+            let researchCount = 0;
             $.each(myResearch, function (index, item) {
                 var paper = '<div class="row top-buffer"><div class="col"><p><b>[' + item.year + '] ' + item.title + '</b>. <em>' + item.authors + '</em>. ' + item.conference + '</p></div></div>' +
                     '<div class="row top-squeeze"><div class="col-lg-12"><a role="button" class="btn btn-primary lefty-button btn-sm" href="' + item.link + '" target="_blank">PDF</button>';
@@ -144,7 +150,7 @@
                 }
                 paper += '</div></div>';
                 researchContainer.append(paper);
-
+                researchCount++;
                 if (item.tier == "journal") {
                     journalCount++;
                 }
@@ -154,6 +160,12 @@
                 else if (item.tier == "workshop") {
                     workshopCount++;
                 }
+                else if (item.tier == "unpublished") {
+                    unpublishedCount++;
+                }
+                else if (item.tier == "thesis") {
+                    thesisCount++;
+                }
             });
 
             let journalItem = document.getElementById('journal-count');
@@ -162,7 +174,13 @@
             conferenceItem.innerHTML = conferenceCount;
             let workshopItem = document.getElementById('workshop-count');
             workshopItem.innerHTML = workshopCount;
+            let thesisItem = document.getElementById('thesis-count');
+            thesisItem.innerHTML = thesisCount;
+            let unpublishedItem = document.getElementById('unpublished-count');
+            unpublishedItem.innerHTML = unpublishedCount;
 
+            let researchItem = document.getElementById('research-count');
+            researchItem.innerHTML = researchCount;
         });    
     </script>
 </body>
