controls toggle and minitaur fix

--- a/index.html
+++ b/index.html
@@ -318,12 +318,12 @@
                       </div>
                       <div class="row mt-2">
                         <div class="col">
-                          <button class="btn btn-secondary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                          <button class="btn btn-secondary" id="more-controls" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
                             More Controls
                           </button>
                         </div>
                         <div class="col">
-                          <button class="btn btn-primary" id="generateLevel">Generate</button>
+                          <button class="btn btn-primary" id="generate-level">Generate</button>
                         </div>
                       </div>
                       <div class="row mt-2">
