--- a/media.html
+++ b/media.html
@@ -66,7 +66,7 @@
                                 <a class="nav-link active" href="media.html" aria-current="page">Media</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="https://mikecgreenblog.wordpress.com/" target="_blank">Blog</a>
+                                <a class="nav-link" href="blog.html">Blog</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="papers/Current.pdf" target="_blank">CV</a>
@@ -104,7 +104,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        <p>Copyright &copy; Michael Cerny Green 2022.</p>
+                        <p>Copyright &copy; Michael Cerny Green 2023.</p>
                     </div>
                 </div>
             </div>
