--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         <a class="nav-link" href="media.html">Media</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://mikecgreenblog.wordpress.com/" target="_blank">Blog</a>
+                        <a class="nav-link" href="blog.html">Blog</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="papers/Current.pdf" target="_blank">CV</a>
@@ -619,7 +619,7 @@
         <footer>
           <div class="row">
             <div class="col-lg-12">
-              <p>Copyright &copy; Michael Cerny Green 2022.</p>
+              <p>Copyright &copy; Michael Cerny Green 2023.</p>
             </div>
           </div>
         </footer>
